--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
           &copy; Copyright <strong><span>Electronic Shop</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="#">SA coding</a>
+          Designed by <a href="#">Ravi Yadav</a>
         </div>
       </div>
     </footer>
