--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@
           &copy; Copyright <strong><span>Electronic Shop</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          Designed by <a href="#">SA coding</a>
+          Designed by <a href="#">Ravi YAdav</a>
         </div>
       </div>
     </footer>
