--- a/index.html
+++ b/index.html
@@ -650,9 +650,9 @@
             <div class="col-lg-3 col-md-6 footer-contact">
               <h3>Electronic Shop</h3>
               <p>
-                Karachi <br>
-                Sindh <br>
-                Pakistan <br>
+                Noida <br>
+                Delhi <br>
+                Gurgaon <br>
               </p>
               <strong>Phone:</strong> +000000000000000 <br>
               <strong>Email:</strong> electronicshop@.com <br>
